# jax-transform-internals-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: compare_gradients.py
src/jax_transform_internals/: __init__.py  demo.py  implicit.py  inspection.py  safe_norm.py
tests/: test_implicit.py  test_inspection.py  test_safe_norm.py
